<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.1</version>
        <configuration>
          <options>
            <option>--add-opens</option>
            <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>java.base/java.lang.reflect=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
          </options>
          <mainClass>com.jkrude.automata.Main</mainClass>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>process-sources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <artifactId>AutomataFx</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <kotlin.version>1.5.21</kotlin.version>

  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib</artifactId>
      <version>${kotlin.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>13</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>13</version>
    </dependency>


    <!-- UI -->
    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.10</version>
    </dependency>

  </dependencies>


  <groupId>com.jkrude</groupId>
</project>